fix gap between social buttons in mobile version

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -67,6 +67,7 @@
     .contact-info-upper-container,
     .btn-container {
       flex-wrap: wrap;
+      gap: 1rem;
     }
     .contact-info-container {
       margin: 0;
